Создано с помощью Colaboratory

--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP3m1DMMZGUyti3sf1eUQcz",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyM3nQhKoHzVu9ylyIlUBFYU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,7 +44,7 @@
       "metadata": {
         "id": "-57ihtvIYcjy"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -54,80 +55,222 @@
       "metadata": {
         "id": "XmhKri3nY8d5"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "**Задача 40:** Работать с файлом california_housing_train.csv, который находится в папке sample_data. \n",
-        "- Определить среднюю стоимость дома, где кол-во людей от 0 до 500 (population)."
-      ],
-      "metadata": {
-        "id": "JkFzBQ_hbLXD"
-      }
     },
     {
       "cell_type": "code",
       "source": [
-        "df[df['population']<501]['median_house_value'].agg(['mean'])"
+        "import matplotlib\n",
+        "import seaborn as sns\n",
+        "import pandas as pd"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "TYnOuEmVeseZ",
-        "outputId": "39d86a27-0025-441f-98ec-06ac5651755a"
+        "id": "8vmRg0DjwVYb"
       },
-      "execution_count": 24,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df = pd.read_csv('/content/sample_data/california_housing_test.csv')\n"
+      ],
+      "metadata": {
+        "id": "67IUup89xRZ9"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random\n",
+        "lst = ['robot'] * 10\n",
+        "lst += ['human'] * 10\n",
+        "random.shuffle(lst)\n",
+        "data = pd.DataFrame({'whoAmI':lst})\n",
+        "data.head()"
+      ],
+      "metadata": {
+        "id": "wZu5FcOR-QUQ",
+        "outputId": "ddd888ab-ad45-415b-dd7a-9699007b4ae8",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 206
+        }
+      },
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "mean    190157.091803\n",
-              "Name: median_house_value, dtype: float64"
+              "  whoAmI\n",
+              "0  robot\n",
+              "1  human\n",
+              "2  robot\n",
+              "3  human\n",
+              "4  robot"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-607640fb-3651-4297-b495-580fec09b168\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>whoAmI</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>robot</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>human</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>robot</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>human</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>robot</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-607640fb-3651-4297-b495-580fec09b168')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-607640fb-3651-4297-b495-580fec09b168 button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-607640fb-3651-4297-b495-580fec09b168');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
             ]
           },
           "metadata": {},
-          "execution_count": 24
+          "execution_count": 16
         }
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "**Задача 42:**\n",
-        "Узнать какая максимальная households в зоне минимального значения population."
-      ],
-      "metadata": {
-        "id": "oj0TLYhAe26r"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
-        "df[df['population']==df['population'].min()]['households'].agg(['max'])"
+        "import random\n",
+        "lst = ['robot'] * 10\n",
+        "lst += ['human'] * 10\n",
+        "random.shuffle(lst)\n",
+        "# data = pd.DataFrame({'whoAmI':lst})\n",
+        "# data.head()\n",
+        "print(lst)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "8bAoNH7Ng9tw",
-        "outputId": "5bf94fad-7699-4959-eb7a-dd4e2a3aaad3"
+        "id": "h3lnzvq_CzfC",
+        "outputId": "5eed17c0-63dc-4ccb-d52d-7aa7ae9add84"
       },
-      "execution_count": 27,
+      "execution_count": 17,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "max    3.0\n",
-              "Name: households, dtype: float64"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 27
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['human', 'robot', 'robot', 'human', 'robot', 'human', 'robot', 'human', 'robot', 'human', 'robot', 'human', 'robot', 'robot', 'robot', 'human', 'human', 'human', 'human', 'robot']\n"
+          ]
         }
       ]
     }
